--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <video width="320" height="240" poster="https://www.themoviedb.org/t/p/original/iy5srhwdsOKEcNGFMFfgA7PgLAH.jpg" controls>
-  <source src="https://kp3d-my.sharepoint.com/personal/ryoo_kp3d_onmicrosoft_com/_layouts/15/download.aspx?share=EcQc6_NBuw5GgZHMIbbxw2QBRTr-v8nQyJUuaTz-otQ_IQ">
+  <source src="https://kp3d-my.sharepoint.com/personal/ryoo_kp3d_onmicrosoft_com/_layouts/15/download.aspx?share=EcQc6_NBuw5GgZHMIbbxw2QBRTr-v8nQyJUuaTz-otQ_IQ" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
